--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
    <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
       <base target="_top">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11"></link>
    </head>
    <body>
       <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/a/~/macros/s/AKfycbyxDGqfTMur9p1iLMRRvtOUOTrpkpOZEnY-S_wXmg0oc_xb_GRRuZ3dWkGAHKz7WNtr/exec"></iframe>
    </body> 
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+// Show SweetAlert2 modal when the webpage loads
+document.addEventListener('DOMContentLoaded', function () {
+  Swal.fire({
+    title: 'ขออภัยในความไม่สะดวกนะครับ',
+    text: 'ตอนนี้แม่ข่ายเว็บที่พี่ใช้ทำเว็บมีปัญหา (ล่มทั่วโลก)',
+    imageUrl: 'path/to/your/image.jpg', // Replace with the path to your image
+    imageWidth: 400, // Adjust the width of the image
+    imageHeight: 200, // Adjust the height of the image
+    imageAlt: 'Custom image',
+    confirmButtonText: 'ปิด'
+  });
+});
+</script>
+   
 </html>
