--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 document.addEventListener('DOMContentLoaded', function () {
   Swal.fire({
     title: 'ขออภัยในความไม่สะดวกนะครับ',
-    text: 'ตอนนี้แม่ข่ายเว็บที่พี่ใช้ทำเว็บมีปัญหา (ล่มทั่วโลก)',
-    imageUrl: 'path/to/your/image.jpg', // Replace with the path to your image
+    text: 'ตอนนี้ทาง Google Script ที่พี่ใช้ทำเว็บมีปัญหา (ล่มทั่วโลก) อาจจะทำให้เข้าได้/ไม่ได้บ้าง',
+    imageUrl: 'https://scontent.fbkk20-1.fna.fbcdn.net/v/t39.30808-6/428688867_7406060469436697_7579550516857767048_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeFI5J_xE4h7uM6C1WsAk0uvibsWSgwjDYGJuxZKDCMNgeNUReGH49dwBVJ8ygcuJPp-5GjGeCzFjg_DpVOYn68r&_nc_ohc=NPB7qwwDs0YAX8xg7z0&_nc_ht=scontent.fbkk20-1.fna&oh=00_AfBCI3Ih9P-hZbDWiFYbnKIRtIAczQ8QgTVxzcOJ5JDmbA&oe=65E2211C', // Replace with the path to your image
     imageWidth: 400, // Adjust the width of the image
     imageHeight: 200, // Adjust the height of the image
     imageAlt: 'Custom image',
