--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ document.addEventListener('DOMContentLoaded', function () {
   Swal.fire({
     title: 'ขออภัยในความไม่สะดวกนะครับ',
     text: 'ตอนนี้ทาง Google Script ที่พี่ใช้ทำเว็บมีปัญหา (ล่มทั่วโลก) อาจจะทำให้เข้าได้/ไม่ได้บ้าง',
-    imageUrl: 'https://scontent.fbkk20-1.fna.fbcdn.net/v/t39.30808-6/428688867_7406060469436697_7579550516857767048_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeFI5J_xE4h7uM6C1WsAk0uvibsWSgwjDYGJuxZKDCMNgeNUReGH49dwBVJ8ygcuJPp-5GjGeCzFjg_DpVOYn68r&_nc_ohc=NPB7qwwDs0YAX8xg7z0&_nc_ht=scontent.fbkk20-1.fna&oh=00_AfBCI3Ih9P-hZbDWiFYbnKIRtIAczQ8QgTVxzcOJ5JDmbA&oe=65E2211C', // Replace with the path to your image
+    imageUrl: 'https://od.lk/d/NzBfMTY0OTYyNzFf/image_2024-02-26_234755156.png', // Replace with the path to your image
     imageAlt: 'Custom image',
     confirmButtonText: 'ปิด'
   });
