--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </head>
    <body>
       <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/a/~/macros/s/AKfycbyxDGqfTMur9p1iLMRRvtOUOTrpkpOZEnY-S_wXmg0oc_xb_GRRuZ3dWkGAHKz7WNtr/exec"></iframe>
- <!-- Include SweetAlert2 JS -->
+<!-- Include SweetAlert2 JS -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
@@ -38,7 +38,7 @@ document.addEventListener('DOMContentLoaded', function () {
         setTimeout(() => {
           currentIndex = (currentIndex + 1) % images.length;
           showNextImage();
-        }, 0);
+        }, currentIndex === 0 ? 3000 : 5000);
       }
     });
   }
@@ -46,6 +46,6 @@ document.addEventListener('DOMContentLoaded', function () {
   // Start the image slideshow
   showNextImage();
 });
-</script> 
+</script>
    </body> 
 </html>
