--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
-// Show SweetAlert2 modal with a single image
 document.addEventListener('DOMContentLoaded', function () {
-  const imageUrl = 'https://lh5.googleusercontent.com/d/1qL7DN4qR1ZS-IkD71mVHEuAT8ZOgYUos';
+  // Check if the screen width is less than or equal to 768 pixels (typical mobile and tablet devices)
+  if (window.innerWidth <= 768) {
+    const imageUrl = 'https://lh5.googleusercontent.com/d/1qL7DN4qR1ZS-IkD71mVHEuAT8ZOgYUos';
 
-  Swal.fire({
-    imageUrl: imageUrl,
-    imageAlt: 'Custom image',
-    confirmButtonText: 'ปิด' // Change the text of the close button
-  });
+    Swal.fire({
+      imageUrl: imageUrl,
+      imageAlt: 'Custom image',
+      showCloseButton: true, // Show close button
+      confirmButtonText: 'ปิด' // Change the text of the close button
+    });
+  }
 });
 </script>
    </body> 
