--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
           cursor: pointer;
           user-select: none;
         }
+         .error-image {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
       </style>
    </head>
    <body>
@@ -67,18 +74,19 @@
           }
         });
       </script>
-      <script>
-         document.addEventListener('DOMContentLoaded', function () {
-  // ตรวจสอบ userAgent ของบราวเซอร์
-  var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+          var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
-  // ตรวจสอบว่าเปิดใน Facebook หรือ Instagram
-  if (/FBAN|FBAV|Instagram/.test(userAgent)) {
-    window.location.assign('error.html');  
-  } else {
-    window.location.assign('index.html'); 
-  }
-});
- </script>
+          // ตรวจสอบ User-Agent สำหรับ Facebook และ Instagram
+          if (/FBAN/.test(userAgent) || /Instagram/.test(userAgent)) {
+            document.getElementById('content').innerHTML = `
+              <div class="image-container">
+                <img src="error.jpg" class="error-image" alt="Error Image">
+              </div>
+            `;
+          }
+        });
+      </script>
    </body> 
 </html>
