--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
           cursor: pointer;
           user-select: none;
         }
-         .error-image {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-        }
       </style>
    </head>
    <body>
@@ -37,7 +30,8 @@
 
       <script>
         document.addEventListener('DOMContentLoaded', function () {
-          if (window.innerWidth <= 768) {
+          var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+          if (/FBAN|FBAV|Instagram/.test(userAgent)) {
             Swal.fire({
               html: `
                 <div class="image-container">
@@ -71,20 +65,6 @@
             document.getElementById('prevButton').addEventListener('click', () => changeImage(false));
 
             changeImage();
-          }
-        });
-      </script>
-     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-          var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-
-          // ตรวจสอบ User-Agent สำหรับ Facebook และ Instagram
-          if (/FBAN/.test(userAgent) || /Instagram/.test(userAgent)) {
-            document.getElementById('content').innerHTML = `
-              <div class="image-container">
-                <img src="error.jpg" class="error-image" alt="Error Image">
-              </div>
-            `;
           }
         });
       </script>
