--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <script>
 document.addEventListener('DOMContentLoaded', function () {
-  var isFacebookBrowser = navigator.userAgent.includes('FBAV') && navigator.userAgent.includes('iPhone');
+  var isFacebookBrowser = navigator.userAgent.includes('FBAV');
   var isInstagramBrowser = navigator.userAgent.includes('Instagram') && navigator.userAgent.includes('iPhone');
   var isMessengerBrowser = navigator.userAgent.includes('FBAN/MessengerForiOS');
 
