--- a/indexgun.html
+++ b/indexgun.html
@@ -136,7 +136,7 @@ function checkPassword() {
       timerProgressBar: true,
       showConfirmButton: false
     }).then((result) => {
-      window.location.href = "winnertle1.html";
+      window.location.href = "winnergun2.html";
     });
   } else {
     // เมื่อรหัสผ่านไม่ถูกต้อง แสดง SweetAlert แบบ error
