--- a/indexgun.html
+++ b/indexgun.html
@@ -127,7 +127,7 @@ function checkPassword() {
   var char4 = document.getElementById("char4").value;
 
   // ตรวจสอบรหัสผ่าน
-  if (char1 === "A" && char2 === "D" && char3 === "B" && char4 === "D") {
+  if (char1 === "B" && char2 === "A" && char3 === "A" && char4 === "D") {
     // เมื่อรหัสผ่านถูกต้อง แสดง SweetAlert
     Swal.fire({
       icon: 'success',
