--- a/indextle.html
+++ b/indextle.html
@@ -50,7 +50,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
-          <h5 class="card-header text-center">Password Game</h5>
+          <h5 class="card-header text-center">แกะรหัส รับ 20 วอลเลต</h5>
           <div class="card-body">
             <form id="passwordForm">
               <div class="row">
