--- a/winnergun2.html
+++ b/winnergun2.html
@@ -31,7 +31,7 @@
   <script>
     // JavaScript สำหรับการเรียกไปยังหน้า award.html เมื่อคลิกปุ่ม
     document.getElementById('award-button').addEventListener('click', function() {
-      window.location.href = 'award.html';
+      window.location.href = 'https://gift.truemoney.com/campaign/?v=018eb94d4a887e70ae0ed2203c734d839d2';
     });
   </script>
 </body>
