--- a/winnertle1.html
+++ b/winnertle1.html
@@ -31,7 +31,7 @@
   <script>
     // JavaScript สำหรับการเรียกไปยังหน้า award.html เมื่อคลิกปุ่ม
     document.getElementById('award-button').addEventListener('click', function() {
-      window.location.href = 'award.html';
+      window.location.href = 'https://gift.truemoney.com/campaign/?v=018eb94dcb7875b192042285449c70bc52k';
     });
   </script>
 </body>
