--- a/indexgun.html
+++ b/indexgun.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Password Game</title>
+  <title>ถอดรหัส รับ 20 วอลเลต โดย พี่หนังสือ</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
@@ -50,7 +50,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
-          <h5 class="card-header text-center">แกะรหัส รับ 20 วอลเลต</h5>
+          <h5 class="card-header text-center">ถอดรหัส รับ 20 วอลเลต</h5>
           <div class="card-body">
             <form id="passwordForm">
               <div class="row">
@@ -151,7 +151,7 @@ function checkPassword() {
 }
 
 // กำหนดเวลาที่หมดอายุ
-var expirationTime = new Date("April 8, 2024 10:00:00").getTime();
+var expirationTime = new Date("April 9, 2024 10:00:00").getTime();
 
 // ตรวจสอบเวลาทุกๆ 1 วินาที
 var interval = setInterval(function() {
@@ -163,7 +163,7 @@ var interval = setInterval(function() {
 }, 1000);
 
 // กำหนดเวลาที่หมดอายุ
-var expirationTime = new Date("April 8, 2024 10:00:00").getTime();
+var expirationTime = new Date("April 9, 2024 10:00:00").getTime();
 
 // ตรวจสอบเวลาทุกๆ 1 วินาที
 var interval = setInterval(function() {
