--- a/indexgun.html
+++ b/indexgun.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col">
                   <div class="form-group">
-                    <label for="char4" class="form-label">กลุ่มที่ 4</label>
+                    <label for="char4" class="form-label">ข้อที่ 4</label>
                     <select class="form-select" id="char4" required>
                       <option value="" disabled selected>เลือก</option>
                       <option value="A">A</option>
