--- a/scoreboard912.html
+++ b/scoreboard912.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ตารางคะแนนควิซ จรรยาบรรณวิชาชีพครู ภาคเช้า</title>
+    <title>อันดับคะแนนควิซ จรรยาบรรณวิชาชีพครู ภาคเช้า</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
