--- a/scoreboard1316.html
+++ b/scoreboard1316.html
@@ -74,7 +74,7 @@
     <div id="postcards"></div>
 
     <script>
-        const apiUrl = 'https://sheets.googleapis.com/v4/spreadsheets/1falIkSXUUQC-B3zdFgJ52lxS2d1LlG_zCop37Um7GHY/values/คะแนนรอบเช้า?alt=json&key=AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
+        const apiUrl = 'https://sheets.googleapis.com/v4/spreadsheets/1falIkSXUUQC-B3zdFgJ52lxS2d1LlG_zCop37Um7GHY/values/คะแนน?alt=json&key=AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
 
         async function fetchData() {
             try {
