--- a/scoreboard1316.html
+++ b/scoreboard1316.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -74,7 +75,7 @@
     <div id="postcards"></div>
 
     <script>
-        const apiUrl = 'https://sheets.googleapis.com/v4/spreadsheets/1falIkSXUUQC-B3zdFgJ52lxS2d1LlG_zCop37Um7GHY/values/คะแนน?alt=json&key=AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
+        const apiUrl = 'https://sheets.googleapis.com/v4/spreadsheets/102vgJ8f4mfhV_wDRx67r9tevgaOshQf1T3fwVxbDGQc/values/Form Responses 1?alt=json&key=AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
 
         async function fetchData() {
             try {
