--- a/scoreboard912.html
+++ b/scoreboard912.html
@@ -74,7 +74,7 @@
     <div id="postcards"></div>
 
     <script>
-        const apiUrl = 'https://sheets.googleapis.com/v4/spreadsheets/1J_DshpxLIbuTGBXXUevV4T7MdKW1hRB1YOXXOzzkuQI/values/คะแนนรอบเช้า?alt=json&key=AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
+        const apiUrl = 'https://sheets.googleapis.com/v4/spreadsheets/13coJwphSh02s2EHCliFoXPlYIxGuETlZIY94OYGn5J0/values/Form Responses 1?alt=json&key=AIzaSyAD_aNO81AEscbG0Ij-krW7neHe6FebBDE';
 
         async function fetchData() {
             try {
