--- a/nitedevaluation.html
+++ b/nitedevaluation.html
@@ -179,10 +179,13 @@
                     suggestionItem.onclick = () => {
                         document.getElementById('search-name').value = match[3]; // Set the input value
                         evaluationButton.disabled = false;
-                        evaluationButton.onclick = function() {
-                            const selectedLink = match[5]; // Column F (evaluation link)
-                            window.open(selectedLink, '_blank'); // Open link in a new tab
-                        };
+evaluationButton.onclick = function() {
+    const selectedLink = match[5]; // Column F (evaluation link)
+    window.open(selectedLink, '_blank'); // Open link in a new tab
+    evaluationButton.disabled = true; // Disable the button after click
+    document.getElementById('search-name').value = ''; // Clear the input field
+};
+
                         suggestionsContainer.style.display = 'none';
                     };
                     suggestionsContainer.appendChild(suggestionItem);
